--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,9 @@ body{
   color: white;
   font-family: 'Megrim', cursive;
 }
+.start{
+  background-image: url("https://i.pinimg.com/originals/60/78/af/6078af6098937f4ae4e8e130a2b88e97.jpg")
+}
 h1{
   font-family: 'MedievalSharp', cursive;
 }
@@ -20,4 +23,16 @@ h1{
   height: 20vh;
   width: 50vw;
   background-color: rgba(0, 0, 0, 0.555)
+}
+
+#goblinBtns {
+  display: none;
+}
+
+#lootBtns {
+  display: none;
+}
+
+#gameOver {
+  display: none;
 }
