--- a/src/styles.css
+++ b/src/styles.css
@@ -74,6 +74,9 @@ img {
 #button-cont {
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
+  width: 100%;
+  margin: 0 30vw 30vh 0;
 }
 
 #leftRight {
@@ -95,4 +98,28 @@ img {
   height: 300px; 
   width: auto;
   margin-top: 40vh;
+}
+
+#enemyStats {
+  display: none;
+  color: white;
+  font-size: 18px;
+  background-color: #222;
+  padding: 20px;
+}
+
+#bossStats {
+  display: none;
+}
+
+#goblinStats {
+  display: none;
+}
+
+#enemyStats p, #stats span {
+  margin: 2px;
+}
+
+#bossBtns {
+  display: none;
 }
